# ast-description-lang

./: .gitignore  Cargo.toml  README.md  ast.bnf
.github/workflows/: ci.yml
examples/: .gitignore  empty.toml  json.toml
examples/foo/: Cargo.toml  build.rs  example.ast  example.toml  sample.foo
examples/foo/src/: main.rs
examples/foo/src/tokens/: mod.rs
examples/json/: Cargo.toml  build.rs  example.ast  example.json  example.toml
examples/json/src/: main.rs
examples/json/src/ast/: mod.rs
examples/json/src/tokens/: mod.rs
src/: lex.rs  lib.rs  print.rs  raw.rs  tokens.rs
src/ast/: lex.rs  mod.rs  print.rs  raw.rs
src/ast/collapsed/: mod.rs  transform.rs
src/ast/parsed/: mod.rs  transform.rs
src/ast/snapshots/: ast_description_lang__ast__print__snapshots-2.snap  ast_description_lang__ast__print__snapshots.snap  ast_description_lang__ast__raw__snapshots-2.snap  ast_description_lang__ast__raw__snapshots.snap
src/collapsed/: mod.rs  transform.rs
src/collapsed/snapshots/: ast_description_lang__collapsed__snapshots-2.snap  ast_description_lang__collapsed__snapshots.snap
src/collections/: impls.rs  mod.rs
src/parsed/: mod.rs  transform.rs
src/parsed/snapshots/: ast_description_lang__parsed__snapshots-2.snap  ast_description_lang__parsed__snapshots.snap
src/snapshots/: ast_description_lang__print__snapshots-2.snap  ast_description_lang__print__snapshots.snap  ast_description_lang__raw__snapshots-2.snap  ast_description_lang__raw__snapshots.snap
tests/: e2e.rs
tests/snapshots/: e2e__main-2.snap  e2e__main.snap  e2e__main@foo.snap
(+4 files in other folders)
