[package]
name = "ast-description-lang"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.1.0-dev"
edition = "2021"
description = "A language to describe your language's AST"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.54"
heck = "0.4.0"
indexmap = "1.8.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
insta = "1.12.0"
